--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,11 +2,339 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raj Aditya</title>
 
-    <link href="./style.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet" />
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html,
+        body {
+            scroll-behavior: smooth;
+            height: auto;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            box-sizing: border-box;
+        }
+
+        header {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0px;
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            padding: 10px 10px 10px 10px;
+            width: 100%;
+            height: 92px;
+            background-color: black;
+        }
+
+        nav {
+            margin: 0px;
+            padding: 0px;
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            flex-direction: row;
+            width: 100%;
+            height: 92px;
+            background-color: black;
+        }
+
+        .profilePicture-box {
+            margin: 0px 100px 0px 280px;
+            width: 55px;
+            height: 55px;
+        }
+
+        #portfolioLogo {
+            width: 55px;
+            height: 55px;
+        }
+
+        .Detail-Box {
+            width: 100%;
+            height: 100%;
+            color: white;
+        }
+
+        #developer-List {
+            margin: 0px;
+            padding: 0px;
+            padding-inline-start: 0px;
+            margin-block-start: 0px;
+            margin-block-end: 0px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            list-style-type: none;
+        }
+
+        .developerList-Items,
+        .developerList-Items>a {
+            user-select: none;
+            cursor: pointer;
+            text-decoration: none;
+            margin: 0px 10px 0px 10px;
+            padding: 0px;
+            font-size: 16px;
+            color: white;
+        }
+
+        .developerList-Items>a:hover {
+            color: darkgrey;
+        }
+
+        .Social-Box {
+            width: 100%;
+            height: 100%;
+            color: white;
+        }
+
+        #developerList-Social {
+            margin: 0px;
+            padding: 0px;
+            display: flex;
+            padding-inline-start: 0px;
+            margin-block-start: 0px;
+            margin-block-end: 0px;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            list-style-type: none;
+        }
+
+        .developerList-Social,
+        .developerList-Social>a {
+            margin: 0px;
+            padding: 0px;
+            list-style-type: none;
+            user-select: none;
+            cursor: pointer;
+            text-decoration: none;
+            padding: 0px;
+            font-size: 16px;
+            color: white;
+        }
+
+        /*Main CSS*/
+
+        main {
+            margin: 0px 0px 0px 0px;
+            background-color: #ffffff;
+            width: 100%;
+            height: auto;
+            margin: 0px;
+            padding: 0px 0px 0px 0px;
+        }
+
+        #mainScreen {
+            margin-bottom: 50px;
+            width: 100%;
+            height: auto;
+            padding: 25px;
+            padding-bottom: 0px;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            border-bottom: #dddddd solid 1px;
+        }
+
+        #mainscreenImage {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        #leftScreen {
+            display: flex;
+            align-items: center;
+            width: 50%;
+            height: 100%;
+        }
+
+        #rightScreen {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        #lowermain {
+            background-color: #ffffff;
+            margin: 40px 0px 30px 0px;
+            padding: 0px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            width: 100%;
+            height: auto;
+        }
+
+        #middleInfo {
+            font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+                sans-serif;
+            color: #838383;
+            font-size: 12px;
+        }
+
+        #leftRule,
+        #rightRule {
+            background-color: #dddddd;
+            align-items: center;
+            margin: 10px 80px 10px 80px;
+            width: 33%;
+            height: 1px;
+        }
+
+        .mywork {
+            width: 100%;
+            height: auto;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .mywork-box {
+            margin: 0px 10px 80px 10px;
+            border: 1px solid #dddddd;
+            border-radius: 10px;
+            padding: 8px;
+            width: 400px;
+            height: auto;
+            background-color: #ffffff;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .img-container {
+            margin: 0px;
+            padding: 0px;
+            width: 100%;
+            height: auto;
+        }
+
+        .mywork-img {
+            border: 1px solid #dddddd;
+            border-radius: 10px;
+            margin: 0px;
+            padding: 0px;
+            width: 100%;
+            height: 30vh;
+        }
+
+        .firstHead {
+            margin: 5px 0px 0px 15px;
+            font-size: 17px;
+        }
+
+        .subHead {
+            margin: 5px 0px 0px 15px;
+            font-size: 12px;
+        }
+
+        footer {
+            border-top: 1px solid #dddddd;
+            background-color: #f5f5f5;
+            width: 100%;
+            height: auto;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #copyright,
+        #copyright>a {
+            text-decoration: none;
+            font-size: 18px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            width: 40%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            align-self: flex-start;
+        }
+
+        #footer-items {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            display: flex;
+            width: 60%;
+            height: 100%;
+            flex-direction: row;
+            user-select: none;
+            list-style-type: none;
+            align-items: center;
+            justify-content: left;
+        }
+
+        .items,
+        .items>a {
+            user-select: none;
+            color: #868686;
+            list-style-type: none;
+            font-size: 18px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin: 0px 10px 0px 10px;
+            box-sizing: border-box;
+            justify-content: space-around;
+            text-decoration: none;
+        }
+
+        .items>a:hover {
+            color: black;
+        }
+
+        .back-to-top {
+            margin: 0px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 120px;
+            background-color: #ffffff;
+        }
+
+        #backTop {
+            display: flex;
+            align-items: top;
+            justify-content: center;
+            border: 1px solid #dddddd;
+            margin: 0px;
+            background-color: #f5f5f5;
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            clip-path: inset(0 0 50% 0);
+            transform: translateY(50%);
+        }
+
+        #upArrow {
+            cursor: pointer;
+            user-select: none;
+            color: white;
+            height: 50%;
+            width: 50%;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,7 +343,7 @@
         <nav id="header-section-nav">
             <div class="profilePicture-box">
                 <a href="Portfolio.html">
-                    <img id="portfolioLogo" src="./asset/mainLogo.png" alt="Profile Picture">
+                    <img id="portfolioLogo" src="./asset/mainLogo.png" alt="Profile Picture" />
                 </a>
             </div>
 
@@ -58,35 +386,32 @@
         </nav>
     </header>
 
-<!--Main Section of the Portfolio Section-->
+    <!--Main Section of the Portfolio Section-->
     <main>
         <div id="mainScreen">
-
             <div id="leftScreen">
-                <img id="mainscreenImage" src="asset/image1.jpg" alt="left-image">
+                <img id="mainscreenImage" src="asset/image1.jpg" alt="left-image" />
             </div>
 
             <div id="rightScreen">
-                <img id="mainscreenImage" src="asset/image2.jpg" alt="right-image">
+                <img id="mainscreenImage" src="asset/image2.jpg" alt="right-image" />
             </div>
         </div>
 
         <div id="lowermain">
-            <div id="leftRule">
-            </div>
+            <div id="leftRule"></div>
 
             <div id="middleInfo">
                 <h3>SOME OF MY LATEST WORK</h3>
             </div>
 
-            <div id="rightRule">
-            </div>
+            <div id="rightRule"></div>
         </div>
 
         <div class="mywork">
             <div class="mywork-box">
                 <div class="img-container">
-                    <img class="mywork-img" src="./asset/1.png" alt="">
+                    <img class="mywork-img" src="./asset/1.png" alt="" />
                 </div>
                 <h5 class="firstHead">Fruit Juice Box</h5>
                 <h6 class="subHead">Main Project</h6>
@@ -94,7 +419,7 @@
 
             <div class="mywork-box">
                 <div class="img-container">
-                    <img class="mywork-img" src="./asset/2.png" alt="">
+                    <img class="mywork-img" src="./asset/2.png" alt="" />
                 </div>
                 <h5 class="firstHead">Portfolio</h5>
                 <h6 class="subHead">My Works</h6>
@@ -102,7 +427,7 @@
 
             <div class="mywork-box">
                 <div class="img-container">
-                    <img class="mywork-img" src="./asset/3.png" alt="">
+                    <img class="mywork-img" src="./asset/3.png" alt="" />
                 </div>
                 <h5 class="firstHead">My Business Idea</h5>
                 <h6 class="subHead">Side Project</h6>
@@ -112,7 +437,7 @@
 
     <div class="back-to-top">
         <div id="backTop">
-            <img id="upArrow" src="asset/upArrow.png" alt="">
+            <img id="upArrow" src="asset/upArrow.png" alt="" />
             <a href=""></a>
         </div>
     </div>
@@ -124,27 +449,36 @@
 
         <div id="footer-nav">
             <ul id="footer-items">
-                <li class="items" >
+                <li class="items">
                     <a href="about.html">about</a>
                 </li>
-                <li class="items" >
+                <li class="items">
                     <a href="book.html">book</a>
                 </li>
-                <li class="items" >
+                <li class="items">
                     <a href="portfolio.html">portfolio</a>
                 </li>
-                <li class="items" >
+                <li class="items">
                     <a href="blog.html">blog</a>
                 </li>
-                <li class="items" >
+                <li class="items">
                     <a href="contact.html">contact</a>
                 </li>
             </ul>
         </div>
     </footer>
 
+    <script>
+        document.querySelector(`.back-to-top`).addEventListener(`click`, toTop = () => {
+            window.scrollTo({
+                top: 0,
+                behavior: `smooth`
+            });
+        });
 
-<script src="backend.js"></script>
+    </script>
+
+    <script src="backend.js"></script>
 </body>
 
 </html>
